services/admin/admin-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
  namespace: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: verseghy/website_admin_frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 2Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
  namespace: admin
spec:
  selector:
    app: admin-frontend
  ports:
    - name: admin-frontend
      protocol: TCP
      port: 80
      targetPort: 80
