services/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
  namespace: admin
spec:
  rules:
    - host: admin.verseghy-gimnazium.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - admin.verseghy-gimnazium.net
      secretName: admin-verseghy-gimnazium-net-tls
